--- a/0/t/css/style.css
+++ b/0/t/css/style.css
@@ -361,8 +361,8 @@ Time: 10:24 EST
 *
 * File: 02-main.css
 * Created: 2016.12.15
-* Updated: 2018-11-26
-* Time: 13:13 EST
+* Updated: 2018-12-15
+* Time: 10:14 EST
 */
 
 /**
@@ -370,10 +370,14 @@ Time: 10:24 EST
  */
 @media screen {
 
-  .updated { background: #181212; }
+  .updated { background: #181215; }
 
   html {
       padding: .12em;
+  }
+
+  html {
+    min-width: 800px;
   }
 
   @media ( min-width: 849px) {
@@ -681,6 +685,11 @@ Time: 10:24 EST
   main {
     display: block;
     clear: both;
+  }
+
+  /** Hide, then reveal. */
+  html.aside aside {
+    display: none;
   }
 
 /** Part width only for displays large enough. */
@@ -1345,3 +1354,223 @@ Time: 10:24 EST
 /* Main All End */
 
 /* Main End */
+
+/**
+ * Color CSS All (screen, print)
+ *
+ * This section handles all the detailed color specifications.
+ *
+ * @link https://github.com/earth3300/ec01-css
+ * @author https://github.com/earth3300
+ * @license GPL v3.0
+ *
+ * File: 03-color.css
+ * Created: 2018-10-01
+ * Updated: 2018-11-21
+ * Time: 08:44 EST
+ */
+
+/**
+ * For all media (screen, print, speech)
+ */
+@media all {
+
+  /** Style the link, which is a wrap around the Tier 0 header. */
+  .site-header > .inner > .color {
+    background-color: hsl(90, 30%, 60%);
+  }
+
+	.color-updated { background-color: #181007; }
+
+  .color.lighter { background-color: #d9d9d9; } /* light grey */
+
+  .who .color.lighter { background-color: hsl(200, 33%, 70%); } /* blue */
+  .what .color.lighter { background-color: hsl(100, 33%, 70%); } /* green */
+  .where .color.lighter { background-color: hsl(33, 33%, 70%); } /* orange */
+  .how .color.lighter { background-color: hsl(0, 0%, 70%); } /* grey */
+  .when .color.lighter { background-color: hsl(44, 33%, 70%); } /* yellow */
+  .why .color.lighter { background-color: hsl(240, 33%, 70%); } /* violet */
+  .wiki .color.lighter { background-color: hsl(0, 0%, 70%); } /* grey */
+
+	.commons .color.lighter { background-color: #b6d7a8; } /* green */
+
+	.nature .color.lighter { background-color: #b6d7a8; }
+	.building .color.lighter { background-color: #d9d9d9; } /* light grey */
+	.information .color.lighter { background-color: #ffe599; } /* light yellow */
+	.project .color.lighter { background-color: #ffd966; } /* light orange */
+	.safety .color.lighter { background-color: #d9d9d9; } /* light grey */
+	.recovery .color.lighter { background-color: #93c47d; } /* medium green */
+	.profession .color.lighter { background-color: #d0e0e3; } /* light blue */
+	.news .color.lighter { background-color: #f1c232; } /* medium orange */
+	.process .color.lighter { background-color: #e6b8af; } /* light magenta */
+	.method .color.lighter { background-color: #e6b8af; } /* light magenta */
+	.standard .color.lighter { background-color: #f4cccc; } /* light violet */
+	.design .color.lighter { background-color: #ffd966;} /* light yellow */
+	.equipment .color.lighter { background-color: #fce5cd; } /* light orange */
+	.resource .color.lighter { background-color: #d9ead3; } /* light green */
+	.service .color.lighter { background-color: #a2c4c9; } /* medium blue */
+	.supply .color.lighter { background-color: #f9cb9c; } /* light orange */
+	.store .color.lighter { background-color: hsl(300, 50%, 75%); } /* medium violet */
+
+	.download .color.lighter { background-color: #279f43; }
+
+	/* headers have a stronger color, same shade */
+
+	.color.darker { background-color: hsl(0, 0%, 60%); } /* grey */
+
+  .who .color.darker { background-color: hsl(200, 33%, 50%); } /* blue */
+  .what .color.darker { background-color: hsl(100, 33%, 50%); } /* green */
+  .where .color.darker { background-color: hsl(33, 33%, 50%); } /* orange */
+  .how .color.darker { background-color: hsl(0, 0%, 85%); } /* grey */
+  .when .color.darker { background-color: hsl(44, 33%, 50%); } /* yellow */
+  .why .color.darker { background-color: hsl(240, 33%, 50%); } /* violet */
+  .wiki .color.darker { background-color: hsl(0, 0%, 60%); } /* grey */
+
+	.trade .color.darker { background-color: #ffa332; } /* orange */
+	.applied .color.darker { background-color: #45818e; } /* cyan */
+	.gardening .color.darker { background-color: #9e6933; } /* brown */
+	.cafe .color.darker { background-color: #cc4125; } /* red berry */
+	.care .color.darker { background-color: #3d8f5f; } /* hospital green */
+	.monitoring .color.darker { background-color: #f1c232; } /* yellow */
+	.academic .color.darker { background-color: #8e7cc3; } /* purple */
+	.arts .color.darker { background-color: #a64d79; } /* magenta */
+	.commons .color.darker { background-color: #b6d7a8; } /* green */
+
+	.nature .color.darker { background-color: #b6d7a8; } /* green */
+	.building .color.darker { background-color: #d9d9d9; }
+	.information .color.darker { background-color: #ffe599; }
+	.interface .color.darker { background-color: #ffe599; }
+	.project .color.darker { background-color: #ffd966; }
+	.safety .color.darker { background-color: #d9d9d9; }
+	.recovery .color.darker { background-color: #93c47d; }
+	.profession { background-color: #d0e0e3; }
+	.supply .color.darker { background-color: #f9cb9c; }
+	.store .color.darker { background-color: hsl(300, 25%, 60%); }
+	.news .color.darker { background-color: #f1c232; }
+	.process .color.darker { background-color: #e6b8af; }
+	.method .color.darker { background-color: #cccccc; }
+	.standard .color.darker { background-color: #f4cccc; }
+	.design .color.darker { background-color: #fc3; } /* darker yellow */
+	.equipment .color.darker { background-color: #fce5cd; }
+	.resource .color.darker { background-color: #d9ead3; }
+	.service .color.darker { background-color: #a2c4c9; }
+	.ethics .color.darker { background-color: hsl(25, 85%, 85%); }
+	.religion .color.darker { background-color: hsl(50, 85%, 85%); }
+	.sustainability .color.darker { background-color: hsl(100, 85%, 85%); }
+	.motivation .color.darker { background-color: hsl(210, 35%, 50%); }
+
+	.download .color.darker { background-color: #279f43; }
+
+	/* SUB LEVEL COLORS */
+
+	/* TRADE */
+	.trade .color.lighter { background-color: #ffd199; } /* orange */
+	.carpentry .color.lighter { background-color: #ea9999; }
+	.electrical .color.lighter { background-color: #f9cb9c; }
+	.plumbing .color.lighter { background-color: #ffe599; }
+	.mechanical .color.lighter { background-color: #b6d7a8; }
+	.welding .color.lighter { background-color: #9fc5e8; }
+	.masonry .color.lighter { background-color: #b4a7d6; }
+
+	/* CAFE */
+	.cafe .color.lighter { background-color: #e6b8af; } /* red berry */
+	.storage .color.lighter { background-color: #ea9999; }
+	.baking .color.lighter { background-color: #f9cb9c; }
+	.cooking .color.lighter { background-color: #ffe599; }
+	.serving .color.lighter { background-color: #b6d7a8; }
+	.cleaning .color.lighter { background-color: #9fc5e8; }
+	.recycling .color.lighter { background-color: #b4a7d6; }
+
+	/* APPLIED */
+	.applied .color.lighter { background-color: #a2c4c9; } /* cyan */
+	.engineering .color.lighter { background-color: #ea9999; }
+	.architecture .color.lighter { background-color: #f9cb9c; }
+	.landscaping .color.lighter { background-color: #ffe599; }
+	.permaculture .color.lighter { background-color: #b6d7a8; }
+	.programming .color.lighter { background-color: #9fc5e8; }
+	.robotics .color.lighter { background-color: #b4a7d6; }
+
+	/* ART */
+	.art .color.lighter { background-color: #d5a6bd; } /* magenta */
+	.piano .color.lighter { background-color: #ea9999; }
+	.violin .color.lighter { background-color: #f9cb9c; }
+	.painting .color.lighter { background-color: #ffe599; }
+	.sculpture .color.lighter { background-color: #b6d7a8; }
+	.pottery .color.lighter { background-color: #9fc5e8; }
+	.saxophone .color.lighter { background-color: #b4a7d6; }
+
+	/* ACADEMIC */
+	.academic .color.lighter { background-color: #d9d2e9; } /* purple */
+	.mathematics .color.lighter { background-color: #ea9999; }
+	.physics .color.lighter { background-color: #f9cb9c; }
+	.chemistry .color.lighter { background-color: #ffe599; }
+	.genetics .color.lighter { background-color: #b6d7a8; }
+	.cognition .color.lighter { background-color: #9fc5e8; }
+	.logic .color.lighter { background-color: #b4a7d6; }
+
+	/* GARDENING */
+	.gardening .color.lighter { background-color: #eedbc9; } /* brown */
+	.cultivating .color.lighter { background-color: #ea9999; }
+	.planting .color.lighter { background-color: #f9cb9c; }
+	.watering .color.lighter { background-color: #ffe599; }
+	.weeding .color.lighter { background-color: #b6d7a8; }
+	.harvesting .color.lighter { background-color: #9fc5e8; }
+	.processing .color.lighter { background-color: #b4a7d6; }
+
+	/* MONITORING */
+	.monitoring .color.lighter { background-color: #ffe599; } /* yellow */
+	.analysis .color.lighter { background-color: #ea9999; }
+	.writing .color.lighter { background-color: #f9cb9c; }
+	.audio .color.lighter { background-color: #ffe599; }
+	.photography .color.lighter { background-color: #b6d7a8; }
+	.graphics .color.lighter { background-color: #d0bef4; }
+	.video .color.lighter { background-color: #9fc5e8; }
+	.presenting .color.lighter { background-color: #b4a7d6; }
+
+	/* CARE */
+	.care .color.lighter { background-color: #a6d9bb; } /* hospital green */
+	.clothing .color.lighter { background-color: #ea9999; }
+	.hair .color.lighter { background-color: #f9cb9c; }
+	.shoes .color.lighter { background-color: #ffe599; }
+	.physio .color.lighter { background-color: #b6d7a8; }
+	.nutrition .color.lighter { background-color: #9fc5e8; }
+	.other .color.lighter { background-color: #b4a7d6; }
+
+	/* WHEN */
+	.day .color.lighter { background-color: #b6d7a8; }
+	.week .color.lighter { background-color: #d9d9d9; }
+	.month .color.lighter { background-color: #ffe599; }
+	.year .color.lighter { background-color: #e6b8af; }
+
+	/* WHY */
+	.ethics .color.lighter { background-color: #b6d7a8; }
+	.sustainability .color.lighter { background-color: hsl(100, 85%, 85%); }
+	.religion .color.lighter { background-color: #ffe599; }
+	.motivation .color.lighter { background-color: hsl(210, 50%, 75%); }
+
+	/* BORDERS */
+	.who.boxes .border { border-color: #70a5ac; } /* dark blue */
+	.what.boxes .border { border-color: #72b257; } /* dark green */
+	.how.boxes .border { border-color: #444; } /* dark grey */
+	.where.boxes .border { border-color: #ffae4b; } /* dark orange */
+	.when.boxes .border { border-color: #ad8100; } /* dark yellow */
+	.why.boxes .border { border-color: #6c53a3; } /* dark purple */
+	.store .border { border-color: hsl(300, 25%, 25%); } /* dark violet */
+
+	nav.icons .who .icon { background-color: #a2c4c9; } /* blue */
+	nav.icons .what .icon { background-color: #b6d7a8; } /* green */
+	nav.icons .how .icon { background-color: #d9d9d9; } /* grey */
+	nav.icons .where .icon { background-color: hsl(33, 100%, 80%); } /* orange */
+	nav.icons .when .icon { background-color: #ffe599; } /* yellow */
+	nav.icons .why .icon { background-color: #d9d2e9; } /* purple */
+	nav.icons .store .icon { background-color: hsl(300, 50%, 80%); } /* violet */
+
+	nav.icons .icon {
+		border-radius: 3px;
+		border: 1px solid #777;
+		width: 35px;
+		height: 35px;
+		box-shadow: 1px 1px 1px #999;
+	}
+}
+/* Color End */
